Cambio de imagen en hero

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="col-sm-4">
           <!-- <drupal-entity alt="Icono donación" data-caption="Icono donación" data-embed-button="media" data-entity-embed-display="view_mode:media.large" data-entity-embed-display-settings="{&quot;link_url&quot;:&quot;&quot;,&quot;link_url_target&quot;:0}" data-entity-type="media" data-entity-uuid="b66a2fa9-b18f-4871-99c0-ba0e6e4b7e54" title="Icono donación"></drupal-entity> -->
           <img src="images/i_donar.png">
-          <p class="lead">Por cada peso que dones, Gabriel donará otro.</p>
+          <p class="lead">Por cada peso que dones, yo donaré otro.</p>
         </div>
         <div class="col-sm-4">
           <!-- <drupal-entity alt="Icono meta" data-embed-button="media" data-entity-embed-display="view_mode:media.large" data-entity-embed-display-settings="{&quot;link_url&quot;:&quot;&quot;,&quot;link_url_target&quot;:0}" data-entity-type="media" data-entity-uuid="f6704035-f28d-4204-8992-e67c4ba53026" title="Icono meta"></drupal-entity> -->
@@ -84,7 +84,7 @@
         <div class="col-sm-4">
           <!-- <drupal-entity alt="Icono estrella" data-caption="Icono estrella" data-embed-button="media" data-entity-embed-display="view_mode:media.large" data-entity-embed-display-settings="{&quot;link_url&quot;:&quot;&quot;,&quot;link_url_target&quot;:0}" data-entity-type="media" data-entity-uuid="8b467436-64ab-4c2c-ae85-795b917a54a8" title="Icono estrella"></drupal-entity> -->
           <img src="images/i_deseo.png">
-          <p class="lead">¡Llegemos a 60,000 pesos para cumplir deseos!</p>
+          <p class="lead">¡Llegemos a 60,000 pesos!</p>
         </div>
       </div>
       <!-- video | content -->
@@ -99,7 +99,7 @@
           <p class="glow">Cómo parte de mi <b>preparación para mi Bar Mitzvah</b>, me propuse encontrar un <b>“mitzvah project”</b> que ayudara directamente a gente a tener una mejor calidad de vida.</p>
           <p class="glow">Encontré a Make-A-Wish, que cumpliendo deseos, transforma vidas; <b>“Cuando un deseo se hace realidad, trae fortaleza, esperanza y transformación”</b>.</p>
           <p class="glow">Ayúdame a cumplir los deseos de niños con enfermedades críticas, para darles fortaleza y alegrías, en medio de su lucha por la vida.</p>
-          <p class="glow lead"><b>¿Ayúdame a cumplir mi deseo!</b></p>
+          <p class="glow lead"><b>¡Ayúdame a cumplir mi deseo!</b></p>
           <form class="form-inline">
             <div class="form-group mb-2">
               <input class="form-control form-control-lg" type="text" id="quantity"  placeholder="Cantidad">
